--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hallo Welt.
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Noels Blog</title>
+	</head>
+	<body>
+		<h1>Noels Blog</h1>
+	</body>
+</html>
